Additions for new foreign API capabilities in jdk 25: * Foreign API supports passing raw pointers into primitive arrays. * Passed buffers now writes back to the original guest object. * More robust 'stubID <-> stub' mechanisms * Passing a heap pointer is now encoded in the shuffle array. * CloseScope is now implemented as a no-op, warning of this once per context